[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "thycotic"
author = "Adam Migus"
author-email = "adam@migus.org"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
description-file = "README.md"
requires = [
    "requests >= 2.12.5"
]
requires-python=">=3.7"
dist-name = "python-tss-sdk"
