[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "delinea"
author = "Delinea Integrations"
author-email = "GitHub@delinea.com"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
description-file = "README.md"
requires = [
    "requests >= 2.12.5"
]
requires-python=">=3.8"
dist-name = "python-tss-sdk"
